@@ -166,6 +166,9 @@ static GameDefs g = {
 	0,	// LESS_ARCTIC_TOWNS
 	60, // OCEAN
 	16, // CONTINENT_SIZE
+	0,  // FRACTAL MAP
+	2,  // FRACTAL SCATTER
+	75, // FRACTAL SMOOTHING
 	0,  // TERRAIN_GRANULARITY
 	0,	// ARCHIPELAGO
 	30, // SEVER_LAND_BRIDGES
